force-app/main/default/objects/Porting__c/Porting__c.object-meta.xml
<CustomObject>
    <description>Object to store the information and Power of Attorney attachments for Number Porting.</description>
    <label>Power of Attorney</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Power of Attorneys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>