force-app/main/default/objects/Porting__c/fields/allCaseActivationsReadyForQA__c.field-meta.xml
<CustomField>
    <fullName>allCaseActivationsReadyForQA__c</fullName>
    <description>TSFDK-230 Field controls if an attachment can be created for the POA. All Activations related to the POA&apos;s cases must have at least Ready for QA Progress.</description>
    <formula>Case__r.AllActivationsReadyForQA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field holds information if all Activations related to the Case are at least in Ready for QA Progress.</inlineHelpText>
    <label>allCaseActivationsReadyForQA</label>
    <type>Checkbox</type>
</CustomField>