force-app/main/default/objects/Porting__c/fields/attachmentCanBeGenerated__c.field-meta.xml
<CustomField>
    <fullName>attachmentCanBeGenerated__c</fullName>
    <description>TSFDK-230 Field controls if an attachment can be created for the POA. All Activations related to the POA&apos;s cases must have at least Ready for QA Progress.</description>
    <formula>Case__r.AllActivationsReadyForQA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>attachmentCanBeGenerated</label>
    <type>Checkbox</type>
</CustomField>