force-app/main/default/objects/Porting__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>TSFDK-230 Legal owner city, usually as in related Account</description>
    <inlineHelpText>The legal owner´s city.</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>