force-app/main/default/objects/Porting__c/fields/CVR__c.field-meta.xml
<CustomField>
    <fullName>CVR__c</fullName>
    <description>TSFDK-230 Legal owner (company) CVR, usually as in related Account</description>
    <inlineHelpText>The legal owner´s (company) CVR.</inlineHelpText>
    <label>CVR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>