force-app/main/default/objects/Porting__c/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <description>Example of the LINK to download(replace domain):
https://teliadenmark--fulldev.lightning.force.com/sfc/servlet.shepherd/document/download/{Document_Id__c}?operationContext=S1</description>
    <label>Document Id</label>
    <length>24</length>
    <type>Text</type>
</CustomField>