force-app/main/default/objects/Porting__c/fields/isCreatedFromPortal__c.field-meta.xml
<CustomField>
    <fullName>isCreatedFromPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TSFDK-230</description>
    <label>isCreatedFromPortal</label>
    <type>Checkbox</type>
</CustomField>