force-app/main/default/objects/Porting__c/fields/Legal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Legal_Owner__c</fullName>
    <description>TSFDK-230 Legal Owner of the numbers to be transferred.</description>
    <inlineHelpText>Legal Owner of the numbers to be transferred. For Company (Account) data will be copied from the related Account.</inlineHelpText>
    <label>Legal Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company (Account)</fullName>
            </value>
            <value>
                <fullName>Company (Other)</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>