force-app/main/default/objects/Porting__c/fields/legalOwnerIsCorrect__c.field-meta.xml
<CustomField>
    <fullName>legalOwnerIsCorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TSFDK-230 The customer confirms if the legal owner on the POA Scrive document is correct.</description>
    <label>legalOwnerIsCorrect</label>
    <type>Checkbox</type>
</CustomField>