force-app/main/default/objects/Porting__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>TSFDK-230 Legal owner name, usually related Account</description>
    <inlineHelpText>The legal owner of the number or number series that will be ported to Telia. It can be a company or a private person.</inlineHelpText>
    <label>Company / Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>