force-app/main/default/objects/Porting__c/fields/Other_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Other_Supplier__c</fullName>
    <description>TSFDK-230 Other suppliers, not listed in the Supplier picklist</description>
    <inlineHelpText>Other supplier names, not listed in the Supplier picklist</inlineHelpText>
    <label>Other Supplier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>