force-app/main/default/objects/Porting__c/fields/POA_Completed__c.field-meta.xml
<CustomField>
    <fullName>POA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TSFDK-230 Technical field to indicate if Scrive document can be generated.</description>
    <inlineHelpText>Scrive document can be generated and this record is visible in the Onboarding Portal.</inlineHelpText>
    <label>POA Completed</label>
    <type>Checkbox</type>
</CustomField>