force-app/main/default/objects/Porting__c/fields/Porting_Day__c.field-meta.xml
<CustomField>
    <fullName>Porting_Day__c</fullName>
    <description>TSFDK-230 Client input for Porting Option - As soon as possible</description>
    <label>Porting Day</label>
    <length>30</length>
    <type>Text</type>
</CustomField>