force-app/main/default/objects/Porting__c/fields/Porting_Option__c.field-meta.xml
<CustomField>
    <fullName>Porting_Option__c</fullName>
    <description>TSFDK-230 Porting Option will be chosen by customer when Scrive document is sent for signature</description>
    <label>Porting Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As soon as possible</fullName>
            </value>
            <value>
                <fullName>End of contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>