force-app/main/default/objects/Porting__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>TSFDK-230 Legal owner postal code, usually as in related Account</description>
    <inlineHelpText>The legal owner´s postal code.</inlineHelpText>
    <label>Postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>