force-app/main/default/objects/Porting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>MK - 13.08.2021 - TSFDK-230 - Status of the Power of attorney.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be created</fullName>
                <default>true</default>
                <label>To be created</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Waiting for Signature</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Timedout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>