force-app/main/default/objects/Porting__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>TSFDK-230 Legal owner street, usually as in related Account</description>
    <inlineHelpText>The legal owner´s street with a number.</inlineHelpText>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>