force-app/main/default/objects/Porting__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>TSFDK-230 Current supplier</description>
    <inlineHelpText>Current supplier</inlineHelpText>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>CBB</fullName>
            </value>
            <value>
                <fullName>TDC</fullName>
            </value>
            <value>
                <fullName>Telenor</fullName>
            </value>
            <value>
                <fullName>Telmore</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>