force-app/main/default/objects/Porting__c/fields/Supplier_Technical__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Technical__c</fullName>
    <description>TSFDK-230 Technical field used in Scrive document</description>
    <formula>IF(TEXT(Supplier__c) = &quot;Other&quot;, Other_Supplier__c, TEXT(Supplier__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Technical</label>
    <type>Text</type>
</CustomField>