force-app/main/default/objects/Porting__c/fields/TDC_Number__c.field-meta.xml
<CustomField>
    <fullName>TDC_Number__c</fullName>
    <label>TDC Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>