force-app/main/default/objects/Porting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POA</fullName>
                <label>Number Porting</label>
            </value>
            <value>
                <fullName>Telia Transfer (T2T)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>