force-app/main/default/objects/Porting__c/validationRules/CVR_must_have_value.validationRule-meta.xml
<ValidationRule>
    <fullName>CVR_must_have_value</fullName>
    <active>true</active>
    <description>If the legal owner is a company, then a CRV number must be entered</description>
    <errorConditionFormula>TEXT(Legal_Owner__c) &lt;&gt; &quot;Private&quot; &amp;&amp; ISNULL(CVR__c)</errorConditionFormula>
    <errorDisplayField>CVR__c</errorDisplayField>
    <errorMessage>Enter a value for CVR</errorMessage>
</ValidationRule>