force-app/main/default/objects/Porting__c/validationRules/Other_Supplier_must_have_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Supplier_must_have_value</fullName>
    <active>true</active>
    <description>If the Supplier is Other, then the value must be entered in the Other Supplier field.</description>
    <errorConditionFormula>TEXT(Supplier__c) = &quot;Other&quot; &amp;&amp; ISBLANK(Other_Supplier__c)</errorConditionFormula>
    <errorDisplayField>Other_Supplier__c</errorDisplayField>
    <errorMessage>Enter a value for Other Supplier</errorMessage>
</ValidationRule>